--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <h2>Activity Contentes</h2>
       2017 08 SingHealth Responsible Care and Use of Laboratory Animals取得
-      2018 04 甲南大学知能情報学部成績優秀者表彰
-      2018 08 NLP若手の会シンポジウムYANS ポスターセッション「学習者英語におけるbe動詞の過剰一般化誤りの傾向と分析」発表
+      <br>2018 04 甲南大学知能情報学部成績優秀者表彰
+      <br>2018 08 NLP若手の会シンポジウムYANS ポスターセッション「学習者英語におけるbe動詞の過剰一般化誤りの傾向と分析」発表
       2018 10 AiBiC Spiral enPiT 総合優勝
       2019 04 甲南大学知能情報学部成績優秀者表彰
       2019 09 関西データベースワークショップ　ポスターセッション「esports観戦における初心者向け解説自動生成」
