--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
   </head>
   <body>
     <h2>About me</h2>
-      ・An engineer
-      ・Machine Learning
-      ・Cloud
-    <h2> Skills</h2>
-    　・Python C Java
-      ・LAMP
+      ・An engineer<br>
+      ・Machine Learning<br>
+      ・Cloud<br>
 
-    <h2>Activity Contentes</h2>
-      2017 08 SingHealth Responsible Care and Use of Laboratory Animals取得
-      <br>2018 04 甲南大学知能情報学部成績優秀者表彰
-      <br>2018 08 NLP若手の会シンポジウムYANS ポスターセッション「学習者英語におけるbe動詞の過剰一般化誤りの傾向と分析」発表
-      2018 10 AiBiC Spiral enPiT 総合優勝
-      2019 04 甲南大学知能情報学部成績優秀者表彰
-      2019 09 関西データベースワークショップ　ポスターセッション「esports観戦における初心者向け解説自動生成」
-      2020 03 電子情報通信学会　論文「esports観戦における初心者向け解説自動生成」
-      2020 03 学位（工学士）
-      2020 04~そのうち書く
+    <h2> Skills</h2><br>
+    　・Python C Java<br>
+      ・LAMP<br>
+
+    <h2>Activity Contentes</h2><br>
+      2017 08 SingHealth Responsible Care and Use of Laboratory Animals取得<br>
+      2018 04 甲南大学知能情報学部成績優秀者表彰<br>
+      2018 08 NLP若手の会シンポジウムYANS ポスターセッション「学習者英語におけるbe動詞の過剰一般化誤りの傾向と分析」発表<br>
+      2018 10 AiBiC Spiral enPiT 総合優勝<br>
+      2019 04 甲南大学知能情報学部成績優秀者表彰<br>
+      2019 09 関西データベースワークショップ　ポスターセッション「esports観戦における初心者向け解説自動生成」<br>
+      2020 03 電子情報通信学会　論文「esports観戦における初心者向け解説自動生成」<br>
+      2020 03 学位（工学士）<br>
+      2020 04~そのうち書く<br>
 
     <h2>論文</h2>
       「esports観戦における初心者向け解説自動生成」2020年電子情報通信学会総合大会 情報・システムソサエティD-4-4
