--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
       ・Machine Learning<br>
       ・Cloud<br>
 
-    <h2> Skills</h2><br>
+    <h2> Skills</h2>
     　・Python C Java<br>
       ・LAMP<br>
 
-    <h2>Activity Contentes</h2><br>
+    <h2>Activity Contentes</h2>
       2017 08 SingHealth Responsible Care and Use of Laboratory Animals取得<br>
       2018 04 甲南大学知能情報学部成績優秀者表彰<br>
       2018 08 NLP若手の会シンポジウムYANS ポスターセッション「学習者英語におけるbe動詞の過剰一般化誤りの傾向と分析」発表<br>
@@ -24,11 +24,11 @@
       2020 04~そのうち書く<br>
 
     <h2>論文</h2>
-      「esports観戦における初心者向け解説自動生成」2020年電子情報通信学会総合大会 情報・システムソサエティD-4-4
+      「esports観戦における初心者向け解説自動生成」2020年電子情報通信学会総合大会 情報・システムソサエティD-4-4<br>
 
     <h2>Links</h2>
-    　・Twitter : @watomon_mk01
-    　・GitHub : @watomon
+    　・Twitter : @watomon_mk01<br>
+    　・GitHub : @watomon<br>
       ・Blog : http://watomon.hateblo.jp
   </body>
 </html>
